settings dark theme add

--- a/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
+++ b/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
@@ -54,7 +54,7 @@
     </tr>
     </thead>
     <tr>
-      <td class="table__cell">Log in</td>
+      <td class="table__cell"><span class="tfa__method">Log in</span></td>
       <td class="table__cell" style="text-align:center">
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-login"><span class="radio__icon"></span>
@@ -77,7 +77,7 @@
       </td>
     </tr>
     <tr>
-      <td class="table__cell">Withdrawal</td>
+      <td class="table__cell"><span class="tfa__method">Withdrawal</span></td>
       <td class="table__cell" style="text-align:center">
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-Withdrawal"><span class="radio__icon"></span>
@@ -100,7 +100,7 @@
       </td>
     </tr>
     <tr>
-      <td class="table__cell">Inner transfer</td>
+      <td class="table__cell"><span class="tfa__method">Inner transfer</span></td>
       <td class="table__cell" style="text-align:center">
         <label class="radio">
           <input class="radio__input" type="radio" name="radio-inner-transfer"><span class="radio__icon"></span>
