--- a/src/assets/scss/components/_EMPTY.scss
+++ b/src/assets/scss/components/_EMPTY.scss
@@ -7,3 +7,10 @@
 @media (min-width:900px) {}
 @media (min-width:1200px) {}
 /*--- media end ---*/
+
+/*--- DARK THEME START---*/
+.dark-theme{}
+@media (min-width:1200px) {
+  .dark-theme{}
+}
+/*--- DARK THEME END---*/
