add currency pair info block

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,19 +1,19 @@
-<p>
-  dashboard works!
-</p>
+<div class="dashboard">
 
-<app-active-pair></app-active-pair>
+  <app-graph></app-graph>
 
-<app-graph></app-graph>
+  <app-active-pair></app-active-pair>
 
-<app-markets></app-markets>
+  <app-markets></app-markets>
 
-<app-trading></app-trading>
+  <app-trading></app-trading>
 
-<app-order-book></app-order-book>
+  <app-order-book></app-order-book>
 
-<app-trade-history></app-trade-history>
+  <app-trade-history></app-trade-history>
 
-<app-orders></app-orders>
+  <app-orders></app-orders>
 
-<app-chat></app-chat>
+  <app-chat></app-chat>
+</div>
+
