--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -1,3 +1,5 @@
-<p>
-  graph works!
-</p>
+<div class="widget">
+  <div class="widget__header">
+    <span class="widget__name">Graph <span>BTC / USD</span></span>
+  </div>
+</div>
