--- a/src/assets/scss/components/_dropdown.scss
+++ b/src/assets/scss/components/_dropdown.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: inline-block;
   /*--- elements start ---*/
-  &__button {
+  &__btn {
     position: relative;
     display: -webkit-flex;
     display: -ms-flex;
