--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -47,13 +47,19 @@ b {
   flex-direction: column;
   min-height: 100%;
   color:#000;
+  -webkit-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  transition: 0.2s ease all;
 }
 .dark-theme{
   background-color: $dark-indigo;
   color:#fff;
-  .header{
-    box-shadow: 0px 0px 4px 4px  rgba(0, 0, 0, 0.25);
-  }
+  -webkit-transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+  //.header{
+  //  box-shadow: 0px 0px 4px 4px  rgba(0, 0, 0, 0.25);
+  //}
 }
 
 .content {
@@ -61,23 +67,33 @@ b {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
+  flex-direction: column;
   flex-grow: 1;
   box-sizing: border-box;
   width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 0 0 60px;
   @media (min-width:600px) {
-    padding: 0 12px 60px;
+    padding: 0 0 60px;
   }
   @media (min-width:1200px) {
-    padding: 75px 20px 0;
+    padding: 75px 0 0;
+  }
+}
+.container{
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  @media (min-width:600px) {
+    padding: 0 12px 0;
+  }
+  @media (min-width:1200px) {
+    padding: 0 20px 0;
   }
 }
 .colon {
   margin-left: 8px;
   margin-right: 8px;
 }
-app-settings{
+app-settings, app-dashboard{
   width: 100%;
 }
