--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -13,6 +13,7 @@
 @import "components/input-file";
 @import "components/select";
 @import "components/datepicker";
+@import "components/dropdown";
 @import "components/row";
 @import "components/link";
 @import "components/toggler";
@@ -26,10 +27,13 @@
 @import "components/overlay";
 @import "components/sidebar-menu";
 @import "components/note";
+@import "components/widget";
+@import "components/currency-pair-info";
 //@import "components/footer";
 @import "components/modal";
 /*--- PAGES ---*/
 @import "pages/login-registration";
+@import "pages/dashboard";
 @import "pages/settings/settings";
 @import "pages/settings/2fa/settings-2fa";
 @import "pages/settings/nickname/settings-nickname";
