--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -1,5 +1,9 @@
   <div class="settings__content">
     <h3 class="title settings__content-title">Change password</h3>
+
+    <!--TODO please style this-->
+    <h4> {{ statusMessage }}</h4>
+
     <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
       <div class="settings__form-row">
         <div class="wrap-input wrap-input--fix230">
@@ -39,7 +43,7 @@
             class="wrap-input__input"
             [ngClass]="{'input--error': !form.get('password_1').valid && form.get('password_1').touched}"
             [type]="getInputType()"
-            formControlName="password_1"
+            formControlName="password_2"
           >
           <label class="wrap-input__label" for="">New password</label>
           <div class="wrap-input__line"></div>
@@ -49,14 +53,14 @@
             [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
           ></span>
           <!--Input error section starts-->
-          <div *ngIf="form.get('password_1').touched && form.get('password_1').errors != null">
+          <div *ngIf="form.get('password_2').touched && form.get('password_2').errors != null">
               <span
-                *ngIf="form.get('password_1').errors['required']"
+                *ngIf="form.get('password_2').errors['required']"
                 class="wrap-input__message">
                 This field is required.
               </span>
             <span
-              *ngIf="form.get('password_1').invalid && !form.get('password_1').errors['required']"
+              *ngIf="form.get('password_2').invalid && !form.get('password_2').errors['required']"
               class="wrap-input__message">
                 The passwords do not match.
               </span>
