add markets widget

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,19 +1,39 @@
 <div class="dashboard">
+  <div class="dashboard__widget-wrap">
 
-  <app-graph></app-graph>
+    <div class="dashboard__item dashboard__item--width2">
+      <app-graph></app-graph>
+    </div>
 
-  <app-active-pair></app-active-pair>
+    <div class="dashboard__item dashboard__item--width1">
+      <app-markets></app-markets>
+    </div>
 
-  <app-markets></app-markets>
+    <div class="dashboard__item dashboard__item--width1">
+      <app-trading></app-trading>
+    </div>
 
-  <app-trading></app-trading>
+    <div class="dashboard__item dashboard__item--width1">
+      <app-order-book></app-order-book>
+    </div>
 
-  <app-order-book></app-order-book>
+    <div class="dashboard__item dashboard__item--width1">
+      <app-trade-history></app-trade-history>
+    </div>
 
-  <app-trade-history></app-trade-history>
+    <!--<div class="dashboard__item dashboard__item&#45;&#45;width2">-->
+      <!--<app-active-pair></app-active-pair>-->
+    <!--</div>-->
 
-  <app-orders></app-orders>
+    <div class="dashboard__item dashboard__item--width2">
+      <app-orders></app-orders>
+    </div>
 
-  <app-chat></app-chat>
+    <div class="dashboard__item dashboard__item--width1">
+      <app-chat></app-chat>
+    </div>
+
+  </div>
+
 </div>
 
