--- a/src/app/popups/login-popup/login-popup.component.html
+++ b/src/app/popups/login-popup/login-popup.component.html
@@ -5,63 +5,83 @@
 
     <!--TODO this message is shown when user provided invalid credentials Or backEndDied-->
     <h4>{{ statusMessage }}</h4>
-
-    <form class="popup__form" [formGroup]="form">
-      <div class="wrap-input popup__wrap-input">
-        <input
-          class="wrap-input__input"
-          type="text"
-          formControlName="email"
-          [ngClass]="{'input--error': !form.get('email').valid && form.get('email').touched}"
-        >
-        <label class="wrap-input__label" for="">Email</label>
-        <div class="wrap-input__line"></div>
-        <!--Input error section starts-->
-        <div *ngIf="form.get('email').touched && form.get('email').errors != null">
+    <!--login start-->
+    <div>
+      <form class="popup__form" [formGroup]="form">
+        <div class="wrap-input popup__wrap-input">
+          <input
+            class="wrap-input__input"
+            type="text"
+            formControlName="email"
+            [ngClass]="{'input--error': !form.get('email').valid && form.get('email').touched}"
+          >
+          <label class="wrap-input__label" for="">Email</label>
+          <div class="wrap-input__line"></div>
+          <!--Input error section starts-->
+          <div *ngIf="form.get('email').touched && form.get('email').errors != null">
           <span
             *ngIf="form.get('email').errors['required']"
             class="wrap-input__message">
             This field is required.
           </span>
-          <span
-            *ngIf="form.get('email').invalid && !form.get('email').errors['required']"
-            class="wrap-input__message">
+            <span
+              *ngIf="form.get('email').invalid && !form.get('email').errors['required']"
+              class="wrap-input__message">
             Please, enter valid email address.
           </span>
+          </div>
+          <!--Input error section ends-->
         </div>
-        <!--Input error section ends-->
-      </div>
-      <div class="wrap-input popup__wrap-input">
-        <input
-          class="wrap-input__input"
-          [type]="getInputType()"
-          formControlName="password"
-          [ngClass]="{'input--error': !form.get('password').valid && form.get('password').touched}"
-        >
-        <label class="wrap-input__label" for="">Password</label>
-        <div class="wrap-input__line"></div>
-        <span
-          class="wrap-input__show-password"
-          (click)="togglePasswordVisibility()"
-          [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
-        >
+        <div class="wrap-input popup__wrap-input">
+          <input
+            class="wrap-input__input"
+            [type]="getInputType()"
+            formControlName="password"
+            [ngClass]="{'input--error': !form.get('password').valid && form.get('password').touched}"
+          >
+          <label class="wrap-input__label" for="">Password</label>
+          <div class="wrap-input__line"></div>
+          <span
+            class="wrap-input__show-password"
+            (click)="togglePasswordVisibility()"
+            [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
+          >
         </span>
-        <!--Input error section starts-->
-        <div *ngIf="form.get('password').touched && form.get('password').errors != null">
+          <!--Input error section starts-->
+          <div *ngIf="form.get('password').touched && form.get('password').errors != null">
           <span
             *ngIf="form.get('password').errors['required']"
             class="wrap-input__message">
             This field is required.
           </span>
+          </div>
+          <!--Input error section ends-->
         </div>
-        <!--Input error section ends-->
-      </div>
-      <button class="btn popup__btn" (click)="onSubmit()">Authorise me</button>
-    </form>
-    <div class="popup__links-wrap">
-      <a class="popup__link popup__link--hidden-mob" href="reg-email.html">Go to registration form</a>
-      <a class="popup__link" href="fgt.html">Forgot password?</a>
+      </form>
     </div>
-    <a class="popup__link-mob" href="#">Registration</a>
+    <!--login end-->
+    <!--2fa code start-->
+    <div>
+      <span class="popup__subtitle">Please enter two-factor <br> autentification code</span>
+      <form class="popup__form" id="login-2fa" action="#">
+        <div class="wrap-input popup__wrap-input">
+          <input class="wrap-input__input" id="log-code" type="text" required="">
+          <label class="wrap-input__label" for="">Autehntification code</label>
+          <div class="wrap-input__line"></div>
+          <span class="wrap-input__message">Incorrect autehntification code.</span>
+        </div>
+      </form>
+    </div>
+    <!--2fa code end-->
+    <button class="btn popup__btn" (click)="onSubmit()">Authorise me</button>
+      <!--links start-->
+      <div>
+        <div class="popup__links-wrap">
+          <a class="popup__link popup__link--hidden-mob" href="reg-email.html">Go to registration form</a>
+          <a class="popup__link" href="fgt.html">Forgot password?</a>
+        </div>
+        <a class="popup__link-mob" href="#">Registration</a>
+      </div>
+    <!--links end-->
   </div>
 </div>
