--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -91,6 +91,7 @@
 @media (min-width: 1200px) {
   .currency-pair-info {
     height: 80px;
+    margin-bottom: 20px;
     &__inner {
       padding: 0 20px;
     }
