--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -22,6 +22,7 @@
 @import "components/paginator";
 @import "components/notification-popup";
 @import "components/steps";
+@import "components/tabs";
 @import "components/chat-btn";
 @import "components/back-to";
 @import "components/overlay";
