--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -47,16 +47,16 @@ b {
   flex-direction: column;
   min-height: 100%;
   color:#000;
-  -webkit-transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  transition: 0.2s ease all;
+  //-webkit-transition: 0.2s ease all;
+  //-moz-transition: 0.2s ease all;
+  //transition: 0.2s ease all;
 }
 .dark-theme{
   background-color: $dark-indigo;
   color:#fff;
-  -webkit-transition: 0.2s ease all;
-  -moz-transition: 0.2s ease all;
-  transition: 0.2s ease all;
+  //-webkit-transition: 0.2s ease all;
+  //-moz-transition: 0.2s ease all;
+  //transition: 0.2s ease all;
   //.header{
   //  box-shadow: 0px 0px 4px 4px  rgba(0, 0, 0, 0.25);
   //}
@@ -80,14 +80,22 @@ b {
   }
 }
 .container{
+  position: relative;
   width: 100%;
-  max-width: 1280px;
+  max-width: 1320px;
   margin: 0 auto;
   @media (min-width:600px) {
     padding: 0 12px 0;
   }
   @media (min-width:1200px) {
     padding: 0 20px 0;
+  }
+  &--dashboard{
+    max-width: none;
+    @media (min-width:1200px) {
+      //padding: 0 32px 0;
+      padding: 0 16px;
+    }
   }
 }
 .colon {
