--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -19,7 +19,7 @@
   &__cell-head {
     padding: 20px 10px;
     color: #000;
-    font-weight: 700;
+    font-weight: 400;
 
     &--tal {
       text-align: left;
@@ -38,18 +38,20 @@
     }
 
     &--p8 {
-      padding-top: 8px;
-      padding-bottom: 8px;
+      padding: 8px 0;
+    }
+    &--p4 {
+      padding: 4px;
     }
   }
 
   &__cell-head-arr {
     margin-right: 4px;
+    fill:#000;
   }
 
   &__body {
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
-
     &--none-shadow {
       box-shadow: none;
     }
@@ -72,6 +74,11 @@
         display: -ms-flex;
         display: flex;
       }
+      .table__row-star{
+        svg{
+          display: inline-block;
+        }
+      }
     }
 
     &--mob {
@@ -80,6 +87,20 @@
       &:hover {
         background-color: #deebfd;
         cursor: pointer;
+      }
+    }
+  }
+  &__row-star{
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    svg{
+      display: none;
+      fill:$dark-indigo;
+    }
+    &:hover{
+      svg{
+        fill:#FFB74C;
       }
     }
   }
@@ -146,7 +167,10 @@
   .table{
     color: #fff;
     &__cell-head{
-      color:#fff;
+      color:#90A0BE;
+    }
+    &__cell-head-arr {
+      fill:#90A0BE;;
     }
   }
 }
