--- a/src/assets/scss/pages/_login-registration.scss
+++ b/src/assets/scss/pages/_login-registration.scss
@@ -38,6 +38,7 @@
   }
 
   &__subtitle {
+    display: block;
     margin-bottom: 12px;
     text-align: center;
     color: $dark-indigo;
@@ -232,3 +233,13 @@
   }
 }
 /*--- media end ---*/
+/*--- DARK THEME START---*/
+.dark-theme{
+  .popup{
+    background-color: $dark-indigo;
+  }
+}
+@media (min-width:1200px) {
+  .dark-theme{}
+}
+/*--- DARK THEME END---*/
